[gd_scene load_steps=2 format=3 uid="uid://cqa48oq2i3hq5"]

[ext_resource type="Script" path="res://Scenes/UI/Main Menu/Settings/options_menu.gd" id="1_6trpk"]

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6trpk")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 108.0
offset_top = 81.0
offset_right = 1153.0
offset_bottom = 643.0
color = Color(0.14902, 0.164706, 0.258824, 1)

[node name="Tabs Container" type="TabContainer" parent="Background"]
layout_mode = 0
offset_top = 1.0
offset_right = 1045.0
offset_bottom = 563.0

[node name="Video" type="TabBar" parent="Background/Tabs Container"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Background/Tabs Container/Video"]
layout_mode = 1
offset_left = 36.0
offset_top = 32.0
offset_right = 164.0
offset_bottom = 104.0

[node name="ResContainer" type="VBoxContainer" parent="Background/Tabs Container/Video/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ResolutionLabel" type="Label" parent="Background/Tabs Container/Video/MarginContainer/ResContainer"]
layout_mode = 2
text = "Resolution
"
horizontal_alignment = 1

[node name="Resolutions" type="OptionButton" parent="Background/Tabs Container/Video/MarginContainer/ResContainer"]
layout_mode = 2
tooltip_text = "
"
flat = true
item_count = 5
selected = 0
popup/item_0/text = "1024x576"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1366x768"
popup/item_2/id = 2
popup/item_3/text = "1600x900"
popup/item_3/id = 3
popup/item_4/text = "1920x1080"
popup/item_4/id = 4

[node name="Audio" type="TabBar" parent="Background/Tabs Container"]
visible = false
layout_mode = 2

[node name="Gameplay" type="TabBar" parent="Background/Tabs Container"]
visible = false
layout_mode = 2

[node name="X" type="Button" parent="Background"]
layout_mode = 0
offset_left = 1017.0
offset_top = 4.0
offset_right = 1044.0
offset_bottom = 35.0
scale = Vector2(0.785, 0.785)
text = "X"

[connection signal="item_selected" from="Background/Tabs Container/Video/MarginContainer/ResContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="pressed" from="Background/X" to="." method="_on_button_pressed"]
